--- a/index.html
+++ b/index.html
@@ -10,46 +10,14 @@
 <body>
 	<div class="container">
 		<h1>JavaScript практика</h1>
-		<div class="row">
-			<div class="col">
-				<div class="card">
-                    <img src="./assets/apples.jpg" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Яблоки</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Посмотреть цену</a>
-                        <a href="#" class="btn btn-danger">Удалить</a>
-                    </div>
-                </div>
-			</div>
-			<div class="col">
-				<div class="card">
-                    <img src="./assets/oranges.jpg" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Апельсины</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Посмотреть цену</a>
-                        <a href="#" class="btn btn-danger">Удалить</a>
-                    </div>
-                </div>
-			</div>
-			<div class="col">
-				<div class="card">
-                    <img src="./assets/mango.jpg" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Манго</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Посмотреть цену</a>
-                        <a href="#" class="btn btn-danger">Удалить</a>
-                    </div>
-                </div>
-			</div>
+		<div class="row" id="fruits">
 		</div>
 	</div>
 
 	
 	<script src="base.js"></script>
 	<script src="plugins/modal.js"></script>
+	<script src="plugins/confirm.js"></script>
 	<script src="index.js"></script>
 </body>
 </html>
